--- a/style.css
+++ b/style.css
@@ -88,3 +88,29 @@ video {
         transform: scale(1);
     }
 }
+
+.video-filters {
+    position: absolute;
+    top: 10vh;
+    /* border: 1px solid white; */
+    left: 10vh;
+    z-index: 3;
+}
+
+.filter {
+    height: 14vh;
+    width: 7vw;
+    /* background: aquamarine; */
+    /* border: 1px solid white; */
+    border: 1px solid white;
+    background-image: url("https://images.pexels.com/photos/1408221/pexels-photo-1408221.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+    background-size: cover;
+    background-blend-mode: soft-light;
+}
+
+.filter-div {
+    position: absolute;
+    top: 0px;
+    height: 100vh;
+    width: 100vw;
+}
