--- a/style.css
+++ b/style.css
@@ -134,3 +134,13 @@ video {
     font-size: 1.5rem;
     color: white;
 }
+
+
+.gallery-btn {
+    background: black;
+    border-radius: 50%;
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
+    border: 2px solid white;
+}
